--- a/Ecommerce/Views/Shared/_Layout.cshtml
+++ b/Ecommerce/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categoria" asp-action="Lista">Categorias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Lista">Productos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
