--- a/Ecommerce/Views/Shared/_Layout.cshtml
+++ b/Ecommerce/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-light bg-primary">
             <div class="container-fluid">
 
-                <a class="navbar-brand text-light" href="#"><strong>Ecommerce</strong><i class="fa-solid fa-cart-shopping fa-beat"></i></a>
+                <a class="navbar-brand text-light" href="#"><strong>Ecommerce</strong><i class="fa-solid fa-cart-shopping"></i></a>
                 <button class="navbar-toggler text-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
